--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
-<html class="h-full w-full">
+<html class="tw-h-full tw-w-full">
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-        
-        html, body, #app {
-          margin: 0;
-          height: 100%;
-        }
-      </style>
-    </head>
-    <body>
-      <noscript>
-        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
-            work properly without JavaScript enabled. Please enable it to
-            continue.</strong>
-        </noscript>
-        <div id="app"></div>
-        <!-- built files will be auto injected -->
-      </body>
-    </html>
+    <title>
+      <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+      html,
+      body,
+      #app {
+        margin: 0;
+        height: 100%;
+      }
+    </style>
+  </head>
+
+  <body>
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
+          work properly without JavaScript enabled. Please enable it to
+          continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+
+</html>
